--- a/css/login.css
+++ b/css/login.css
@@ -8,7 +8,7 @@
 input{
     display: block;
     margin: 30px auto;
-    padding: 20px;
+    padding: 20px 0;
     width: 90%;
     font-size: 1em;
     color: #48CFAD;
@@ -17,7 +17,7 @@ input{
 }
 
 input.error{
-    border: 3px solid #DA4453;
+    border: 1px solid #DA4453;
 }
 
 a.accountLink{
@@ -39,7 +39,8 @@ a.accountLink{
     width: 90%;
     margin: 0 auto 50px;
     text-align: center;
-    padding: 21px;
+    padding: 21px 0;
+    border: 1px solid #3b5998;
 }
 
 .login{
