--- a/css/algemene.css
+++ b/css/algemene.css
@@ -1,7 +1,8 @@
 * {
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
+
 body {
     font-size: 36pt;
     font-family: lato;
@@ -57,15 +58,20 @@ h2 {
     float: left;
     margin-left: auto;
 }
-
+#hoofdNav a:link{
+    color:#48CFAD;
+}
+#hoofdNav a:visited{
+    color:#48CFAD;
+}
 .icon-vac {
     font-size: 150%;
     margin-top: 40px;
 }
 
 .icon-berichten {
-    font-size: 150%;
-    margin-top: 40px;
+    font-size: 200%;
+    margin-top: 30px;
 }
 
 .icon-groepen {
