--- a/css/registreren.css
+++ b/css/registreren.css
@@ -5,11 +5,11 @@ body{
 #knop{
     background-color: #48CFAD;
     color:white;
-    height:127px;
+    height:50px;
     text-align: center;
-    font-size:48pt;  
+    font-size:1.5em;  
     vertical-align: middle;
-    line-height: 127px;
+    line-height: 50px;
     font-weight:400;
     margin:0;
 }
