--- a/css/algemene.css
+++ b/css/algemene.css
@@ -12,11 +12,12 @@ body{
 header {
     background-color: #48CFAD;
     color:white;
-    height:50px;
+    height:100px;
     text-align: center;
     vertical-align: middle;
-    line-height: 50px;
+    line-height: 100px;
     font-weight:400;
+    font-size:2em;
 }
 
 h1{
