--- a/css/registreren.css
+++ b/css/registreren.css
@@ -1,21 +1,76 @@
-body{
-    font-family: Lato;
+
+img{
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+    margin-top:150px;
+    width:350px;
+    height:350px;
 }
-    
 #knop{
     background-color: #48CFAD;
     color:white;
-    height:50px;
+    height:127px;
     text-align: center;
-    font-size:1.5em;  
+    font-size:48pt;
     vertical-align: middle;
-    line-height: 50px;
+    line-height: 127px;
     font-weight:400;
     margin:0;
+    margin-top:100px;
 }
+.midden{
+    margin-top:50px;
+    margin-left:auto;
+    margin-right:auto;
+    width:90%;
+    height:100px;
+    
+}
+p{
+    font-weight:400;
+}
+p:first-child{
+    margin-right:4%;
+    box-sizing: border-box;
+    display:block;
+    margin-left:auto;
+    float:left;
+    width:30%;
+}
+p:last-child{
+    float:right;
+    box-sizing: border-box;
+    width:30%;
+    color: #48CFAD;
+}
+
 input{
     display:block;
+    height:76px;
+    width:100%;
+    margin-top:2%;
+    margin-bottom:2%;
+    border: solid 1px #808080;
+    border-radius:10px;
+    font-size: 36pt;
+    font-family:Lato;
+    color: #000000;
+    padding:20px;
+    
 }
+
+form{
+    clear:both;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+    width:90%
+}
+#studentform{
+    display:none;
+}
+
 
 
 
@@ -26,6 +81,9 @@ https://proto.io/freebies/onoff/
 
 */
 .onoffswitch {
+    margin-top:15px;
+    margin-left:12%;
+    float:left;
     position: relative; width: 80px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
