--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -1,7 +1,15 @@
+body{
+    padding: 0 0 2em 0;
+}
+
+header{
+    margin-bottom: 0;
+}
+
 div.vacatures header{
     background: rgba(0,0,0,0);
     padding: 0;
-    margin: 0;
+    margin: 1em 0 0 0;
 }
 .vacatures header h2{
     font-size: .75em;
@@ -31,6 +39,7 @@ div.vacatures header{
     right: 0;
     
     width: 0;
+    max-width: 15em;
     overflow: hidden;
 }
 .sliderOnTop ul{
@@ -44,6 +53,7 @@ div.vacatures header{
     float: left;
     width: 50%;
     height: 100%;
+    box-sizing: border-box;
 }
 .sliderOnTop ul li:hover{
     cursor: pointer;
@@ -51,7 +61,9 @@ div.vacatures header{
 }
 .sliderOnTop ul li img{
     width: 1.5em;
-    vertical-align: middle;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 .sliderUnder{
     position: relative;
@@ -65,6 +77,7 @@ div.vacatures header{
     height: 100%;
     box-sizing: border-box;
     display: inline-block;
+    /*margin-left: -35%;*/
 }
 .sliderUnder .text h1{
     margin: 0 0 1em;
