--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -105,27 +105,30 @@ div.vacatures header{
     color: #777;
 }
 .sliderUnder .messages{
-    display: block;
+    text-align: center;
+    display: inline-block;
     width: 20%;
-    height: 100%;
-    min-height: 6.3em;
     float: right;
     position: relative;
-    background: url(../img/msg.png) no-repeat right;
-    background-size: 2em;
+    background: url(../img/msg.png) no-repeat center;
+    background-size: 3em;
 }
+.sliderUnder .messages:hover{
+    cursor: pointer;
+    opacity: .5;
+}
+
 .sliderUnder .messages p{
-    display: block;
+    display: inline-block;
     color: #fff;
     background: #DA4453;
     border-radius: 100px;
-    text-align: center;
     width: 1.5em;
     height: 1.5em;
     position: absolute;
-    top: 2.5em;
-    right: 2.5em;
+    top: 3em;
 }
+
 
 
 
