--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -107,7 +107,10 @@ div.vacatures header{
 .sliderUnder .messages{
     text-align: center;
     display: inline-block;
-    width: 20%;
+    width: 15%;
+    min-height: 6em;
+    margin: 0 5% 0 0;
+    overflow: hidden;
     float: right;
     position: relative;
     background: url(../img/msg.png) no-repeat center;
