--- a/css/berichten.css
+++ b/css/berichten.css
@@ -39,16 +39,24 @@ header{
 }
 .orden{
     position:absolute;
-    left:62%;
+    left:65%;
+    overflow:hidden;
+    width:35%;
     display:none;
 }
 .orden ul{
-    font-size:0.8em;
+    font-size:0.7em;
     list-style-type: none;
 }
 .orden li{
     font-weight: 300;
-    padding:20px;
+    width:100%;
     margin-bottom:2px;
     background-color: rgba(0,0,0,0.75);
+}
+.klik{
+    width:100%;
+    height:100vh;
+    position: fixed;
+
 }
