--- a/css/berichten.css
+++ b/css/berichten.css
@@ -1,15 +1,3 @@
-.editKnop{
-    position:absolute;
-    left: 9%;
-    top: 17px;
-    width:23px;
-}
-.optieKnop{
-    position: absolute;
-    left:88%;
-    top:17px;
-    width:5px;
-}
 .bericht{
     background-color: #EEF3F5;
     margin-bottom: 5px;
@@ -59,4 +47,22 @@ header{
     height:100vh;
     position: fixed;
 
+}
+.editKnop{
+    position:absolute;
+    left: 9%;
+    top: 17px;
+    width:23px;
+}
+.optieKnop{
+    position:absolute;
+    left:80%;
+    width:20px;
+    height:20px;
+}
+.optieKnop img{
+    position: absolute;
+    left:88%;
+    top:17px;
+    width:5px;
 }
