--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -11,11 +11,11 @@ header h1{
     margin-left:25%;
     width: 50%;
 }
-header a img{
-    vertical-align: middle;
-    line-height:100px;
-    margin: 0;
+header a .new{
+    margin: .3em;
     padding: 0;
+    width: 30px;
+    height: 30px;
 }
 .new{
     height:80%;
@@ -84,6 +84,7 @@ div.vacatures header{
 .sliderUnder{
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 .sliderUnder .text{
     padding: 1.25em 0;
@@ -120,6 +121,7 @@ div.vacatures header{
 }
 
 .sliderUnder .messages p{
+    line-height: 1.4em;
     display: inline-block;
     color: #fff;
     background: #DA4453;
@@ -132,5 +134,12 @@ div.vacatures header{
 
 
 
-
+.clearfix:after 
+{ 
+ content: "."; 
+ display: block; 
+ clear: both; 
+ visibility: hidden; 
+ line-height: 0; height: 0; 
+}
 
