--- a/css/berichten.css
+++ b/css/berichten.css
@@ -5,10 +5,10 @@
 
 }
 .bericht h3{
-    font-weight: 300;
+    font-weight: 400;
     padding-top:20px;
     padding-bottom:10px;
-    
+    font-size:1em;
 }
 .bericht p{
     max-height:40px;
