--- a/css/algemene.css
+++ b/css/algemene.css
@@ -1,40 +1,40 @@
 * {
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
-body{
+body {
     font-size: 1em;
     font-family: Lato;
     font-weight: 300;
-    color:#555;
+    color: #555;
 }
 
 header {
     background-color: #48CFAD;
-    color:white;
-    height:50px;
+    color: white;
+    height: 50px;
     text-align: center;
     vertical-align: middle;
     line-height: 50px;
-    font-weight:400;
-    font-size:2em;
-    margin-bottom:50px;
+    font-weight: 400;
+    font-size: 2em;
+    margin-bottom: 50px;
 }
 
-h1{
-    font-size:1.0em; 
+h1 {
+    font-size: 1.0em;
     font-weight: 300;
 }
 
 .content {
-    margin-left:4%;
+    margin-left: 4%;
 }
 
-h2{
+h2 {
     color: #48CFAD;
     font-size: 1.2em;
-    font-weight:400;
+    font-weight: 400;
 }
 
 #hoofdNav {
@@ -65,12 +65,15 @@ h2{
     float: left;
     margin-left: auto;
 }
-#hoofdNav a:link{
-    color:#48CFAD;
+
+#hoofdNav a:link {
+    color: #48CFAD;
 }
-#hoofdNav a:visited{
-    color:#48CFAD;
+
+#hoofdNav a:visited {
+    color: #48CFAD;
 }
+
 .icon-vac {
     font-size: 1.5em;
     margin-top: 10px;
@@ -90,6 +93,17 @@ h2{
     font-size: 1.1em;
     margin-top: 15px;
 }
+/* Navigatie student */
+
+.icon-zoeken {
+    font-size: 1.4em;
+    margin-top: 12px;
+}
+
+.icon-fav {
+    font-size: 1.4em;
+    margin-top: 12px;
+}
 
 .main {
     color: white;
@@ -99,19 +113,20 @@ h2{
 .wrapper {
     margin-bottom: 50px;
 }
-a{
+
+a {
     text-decoration: none;
-    color:black;
-}
-.terugKnop{
-    position:absolute;
-    left:0%;
-    width:20%;
-    height:50px;
-    top:0;
-}
-.terugKnop img{
-    width:10px;
+    color: black;
 }
 
-    
+.terugKnop {
+    position: absolute;
+    left: 0%;
+    width: 20%;
+    height: 50px;
+    top: 0;
+}
+
+.terugKnop img {
+    width: 10px;
+}
