--- a/css/algemene.css
+++ b/css/algemene.css
@@ -130,3 +130,13 @@ a {
 .terugKnop img {
     width: 10px;
 }
+.plusKnop {
+    position: absolute;
+    left: 80%;
+    width: 18%;
+    height: 50px;
+    top: 0;
+}
+.plusKnop img{
+    width:20px;
+}
