--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -86,8 +86,8 @@ div.vacatures header{
     transform: translateY(-50%);
 }
 .sliderUnder{
-    position: relative;
-    height: 100%;
+    /*position: relative;*/
+    /*height: 100%;*/
     overflow: hidden;
 }
 .sliderUnder .text{
@@ -95,9 +95,9 @@ div.vacatures header{
     margin: 0 0 0 5%;
     color: #555;
     width: 70%;
-    height: 100%;
-    box-sizing: border-box;
-    display: inline-block;
+    /*height: 100%;*/
+    /*box-sizing: border-box;*/
+    /*display: inline-block;*/
 }
 .sliderUnder .text h1{
     margin: 0 0 1em;
@@ -108,14 +108,25 @@ div.vacatures header{
     color: #777;
 }
 .sliderUnder .messages{
-    text-align: center;
-    display: inline-block;
-    width: 15%;
+    background: red;
+    
+    display: block;
+    width: 5em;
     min-height: 6em;
+    position: absolute;
+    right: 0;
+    top: 0;
+    text-align: center;
+    
+    
+    /*text-align: center;
+    display: inline-block;
+    width: 15%;*/
+    /*min-height: 6em;*/
     margin: 0 5% 0 0;
-    overflow: hidden;
-    float: right;
-    position: relative;
+    /*overflow: hidden;*/
+    /*float: right;*/
+    /*position: relative;*/
     background: url(../img/msg.png) no-repeat center;
     background-size: 3em;
 }
@@ -133,7 +144,7 @@ div.vacatures header{
     width: 1.5em;
     height: 1.5em;
     position: absolute;
-    top: 3em;
+    top: 2.8em;
 }
 
 
