--- a/css/groepen.css
+++ b/css/groepen.css
@@ -4,6 +4,7 @@
         background-color:#EEF3F5;
         float:left;
         border-radius: 5px;
+        
 }
 
 .groepen img{
@@ -17,4 +18,10 @@
         text-align: center;
         font-size:1.5em;
         margin-bottom:20px;
+}
+header{
+    margin-bottom: 20px;
+}
+br{
+    clear:both;
 }
