--- a/css/login.css
+++ b/css/login.css
@@ -14,6 +14,8 @@ input {
     color: #48CFAD;
     background-color: #f5f7fa;
     border: 1px solid #48CFAD;
+    border-radius: 2px;
+    text-indent: 10px;
 }
 
 input.error {
