--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -4,7 +4,6 @@ body{
 
 header{
     margin-bottom: 0;
-    vertical-align: middle;
 }
 header h1{
     float:left;
@@ -26,27 +25,28 @@ header a .new{
 div.vacatures header{
     background: rgba(0,0,0,0);
     padding: 0;
-    margin: 1em 0 0 0;
+    margin: .5em 0 0 0;
 }
 .vacatures header h2{
-    font-size: .75em;
-    font-weight: 200;
+    font-size: .6em;
+    font-weight: 400;
 }
 #list{
     width: 100%;
     list-style-type: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 1.5em 0;
     overflow: hidden;
 }
 #list > li{
     background-color: #EEF3F5;
     position: relative;
-    margin: .8em 0;
+    margin: .5em 0;
     /*min-height: 6em;*/
     /*overflow: hidden;*/
 }
 .vacature{
+    cursor: pointer;
     position: relative;
     right: 0;
 }
@@ -75,10 +75,6 @@ div.vacatures header{
     height: 100%;
     box-sizing: border-box;
 }
-.sliderOnTop ul li:hover{
-    cursor: pointer;
-    background-color: #f66;
-}
 .sliderOnTop ul li img{
     width: 1.5em;
     position: relative;
@@ -101,14 +97,20 @@ div.vacatures header{
 }
 .sliderUnder .text h1{
     margin: 0 0 1em;
-    font-weight: 500;
-    font-size: 1.2em;
+    font-weight: 400;
+    font-size: 1.1em;
+    
+    line-height: 1.1em;
+    max-height: 2.2em;
+    overflow: hidden;
+    /*font-weight: 500;
+    font-size: 1.2em;*/
 }
 .sliderUnder .text p{
+    font-size: 1em;
     color: #777;
 }
 .sliderUnder .messages{
-    background: red;
     
     display: block;
     width: 5em;
@@ -127,24 +129,20 @@ div.vacatures header{
     /*overflow: hidden;*/
     /*float: right;*/
     /*position: relative;*/
-    background: url(../img/msg.png) no-repeat center;
-    background-size: 3em;
-}
-.sliderUnder .messages:hover{
-    cursor: pointer;
-    opacity: .5;
+    /*background: url(../img/msg.png) no-repeat center;*/
+    background-size: 2.5em;
 }
 
 .sliderUnder .messages p{
-    line-height: 1.45em;
+    line-height: 2.5em;
     display: inline-block;
     color: #fff;
     background: #DA4453;
     border-radius: 100px;
-    width: 1.5em;
-    height: 1.5em;
+    width: 2.5em;
+    height: 2.5em;
     position: absolute;
-    top: 2.8em;
+    top: 1.75em;
 }
 
 
