--- a/css/paswoordverandering.css
+++ b/css/paswoordverandering.css
@@ -1,3 +1,38 @@
 header h1{
-    font-size:0.7em;
+    font-size:0.5em;
+
+}
+.content{
+    width:90%;
+    margin-left:5%;
+}
+h3{
+    color: #48CFAD;
+    font-size:1em;
+    margin-bottom: 20px;
+    
+}
+input{
+    display:block;
+    height:20px;
+    margin-top:5px;
+    margin-bottom:5px;
+    width:100%;
+}
+button{
+    height:30px;
+    margin-top:5px;
+    font-family: Lato;
+    background-color: #48CFAD;
+    border:0;
+    color: white;
+    
+}
+button:first-child{
+    width:40%;
+    background-color: #DA4453;
+}
+button:last-child{
+    width:40%;
+    float:right;
 }
