--- a/css/vacaturesWN.css
+++ b/css/vacaturesWN.css
@@ -57,6 +57,7 @@ header{
 }
 
 .tab ul li {
+    color: #555555;
     display: inline-block;
     font-size: 1.5em;
     text-transform: uppercase;
@@ -64,7 +65,7 @@ header{
     width: 50%;
     margin: 0;
     padding: 12px 0 10px;
-    border-bottom: 1px solid #000000;
+    border-bottom: 1px solid #555555;
     cursor: pointer;
 }
 
