--- a/css/privacy.css
+++ b/css/privacy.css
@@ -1,9 +1,13 @@
 h3{
    margin-bottom:15px;
     color:#48CFAD;
+    
 }
 body{
     font-size:0.9em;
+}
+p{
+    margin-left:10%;
 }
 .content{
     width:90%;
@@ -14,6 +18,9 @@ input{
     height:20px;
     width:20px;
     margin-bottom:5px;
+    margin-top:1%;
+    float:left;
+    background-color: #48CFAD;
 }
 form{
     margin-bottom:15px;
