--- a/css/profielstudentbewerken.css
+++ b/css/profielstudentbewerken.css
@@ -1,6 +1,9 @@
 header h1{
     font-size:0.8em;
 }
+header {
+margin-bottom: 25px; 
+}
 input{
     height:25px;
     width:90%;
@@ -16,6 +19,7 @@ input{
     border-radius:50%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15px; 
 }
 .line h3{
     float:left;
