--- a/css/berichten.css
+++ b/css/berichten.css
@@ -79,7 +79,7 @@ header{
 .orden li{
     font-weight: 300;
     width:100%;
-    margin-bottom:2px;
+    border-bottom:2px solid white;
     background-color: rgb(42,177,143);
 }
 .klik{
