--- a/css/vacaturesWN.css
+++ b/css/vacaturesWN.css
@@ -22,7 +22,7 @@ body{
 .orden li{
     font-weight: 300;
     width:100%;
-    margin-bottom:2px;
+    border-bottom: 2px solid white;
     background-color: rgb(42,177,143);
     cursor: pointer;
 }
