--- a/css/Chatbox.css
+++ b/css/Chatbox.css
@@ -1,23 +1,26 @@
 header{
     position:fixed;
     width:100%;
+    z-index: 100;
 }
 .wrapper{
     padding-top:70px;
 }
 .chatLinks{
-    float:left;
+    position: relative;
+    left:0;
     margin-bottom:30px;
 }
 .chatRechts{
-    float:right;
+    position: relative;
+    right:0;
     margin-bottom:30px;
 }
 .chatLinks .box{
     background-color: #EEF3F5;;
     width:60%;
     margin-left:10%;
-    border-radius: 0em 2em 2em 2em;
+    border-radius: 0em 1em 1em 1em;
     z-index:100;
     z-index: 10;
 }
@@ -25,7 +28,7 @@ header{
     background-color: #EEF3F5;
     width:60%;
     margin-left:30%;
-    border-radius: 2em 0em 2em 2em;
+    border-radius: 1em 0em 1em 1em;
     z-index:100;
     z-index: 10;
 }
