--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -105,21 +105,29 @@ div.vacatures header{
     line-height: 1.1em;
     max-height: 1.1em;
     overflow: hidden;
-    /*font-weight: 500;
-    font-size: 1.2em;*/
+    font-weight: 500;
+    font-size: 1.2em;
 }
-.sliderUnder .text p{
+.sliderUnder .text .datum{
+    margin: 1em 0 0 0;
     font-size: 1em;
     color: #777;
 }
+.sliderUnder .text p.beschrijving{
+    font-size: .85em;
+    line-height: 1.25em;
+    overflow: hidden;
+    height: 2.5em;
+    color: #777;
+}
 .sliderUnder .messages{
-    z-index: 100;
+    z-index: 1;
     display: block;
-    width: 2.5em;
-    min-height: 6em;
+    width: 3.5em;
+    min-height: 5.4em;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 2em;
     margin: 0 5% 0 0;
     background-size: 2.5em;
 }
@@ -134,7 +142,8 @@ div.vacatures header{
     width: 2.5em;
     height: 2.5em;
     position: absolute;
-    top: 1.75em;
+    top: 1.5em;
+    left: .5em;
 }
 
 
