--- a/css/algemene.css
+++ b/css/algemene.css
@@ -1,14 +1,6 @@
 * {
     padding: 0;
     margin: 0;
-    
-    -webkit-touch-callout:none;
-    -webkit-user-select:none;
-    -khtml-user-select:none;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 body {
@@ -17,6 +9,7 @@ body {
     font-weight: 300;
     color: #555;
 }
+
 header {
     background-color: #48CFAD;
     color: white;
@@ -123,7 +116,7 @@ h2 {
 
 a {
     text-decoration: none;
-    color: #555;
+    color: black;
 }
 
 .terugKnop {
@@ -149,4 +142,8 @@ a {
 }
 .clearFix{
     clear:both;
+}
+
+input {
+    font-family: inherit; 
 }
