--- a/css/registreren.css
+++ b/css/registreren.css
@@ -32,6 +32,7 @@ p:first-child{
     box-sizing: border-box;
     display:block;
     float: left;
+
 }
 p:last-child{
     box-sizing: border-box;
@@ -50,6 +51,7 @@ input{
     border: 1px solid #48CFAD;
     border-radius: 2px;
     text-indent: 10px;
+    font-family: inherit;
 }
 
 form{
@@ -62,7 +64,6 @@ form{
 #studentform{
     display:none;
 }
-
 
 
 
