--- a/css/Chatbox.css
+++ b/css/Chatbox.css
@@ -43,19 +43,7 @@ header{
     background-color: #48CFAD;
     width:100%;
 }
-.sturen div{
-    width:70%;
-    border: 2px solid white;
-    border-radius:0.3em;
-    height:30px;
-    box-sizing: border-box;
-    padding-left:4%;
-    padding-top:3px;
-    color:white;
-    margin-top:10px;
-    margin-left:10%;
-    float:left;
-}
+
 .sturen p{
     float:left;
     width:15%;
@@ -66,4 +54,24 @@ header{
 h1{
     font-size:0.8em;
 
+}
+input, select, textarea, button{
+    font-family:inherit;
+    color:white;
+}
+input[type=text]{
+    background-color:#48CFAD;
+    width:70%;
+    border: 2px solid white;
+    color:white;
+    border-radius:0.4em;
+    height:30px;
+    box-sizing: border-box;
+    padding-left:4%;
+    padding-top:3px;
+    margin-top:10px;
+    margin-left:10%;
+    float:left;
+    font-size:1em;
+    color:white;
 }
