--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -48,7 +48,7 @@ div.vacatures header{
     /*overflow: hidden;*/
 }
 .vacature{
-    /*cursor: pointer;*/
+    cursor: pointer;
     position: relative;
     right: 0;
 }
@@ -103,7 +103,7 @@ div.vacatures header{
     font-size: 1.1em;
     
     line-height: 1.1em;
-    max-height: 1.1em;
+    max-height: 2.2em;
     overflow: hidden;
     /*font-weight: 500;
     font-size: 1.2em;*/
@@ -113,7 +113,7 @@ div.vacatures header{
     color: #777;
 }
 .sliderUnder .messages{
-    z-index: 10;
+    
     display: block;
     width: 2.5em;
     min-height: 6em;
