--- a/css/algemene.css
+++ b/css/algemene.css
@@ -9,7 +9,6 @@ body {
     font-weight: 300;
     color: #555;
 }
-
 header {
     background-color: #48CFAD;
     color: white;
@@ -116,7 +115,7 @@ h2 {
 
 a {
     text-decoration: none;
-    color: black;
+    color: #555;
 }
 
 .terugKnop {
@@ -142,8 +141,4 @@ a {
 }
 .clearFix{
     clear:both;
-}
-
-input {
-    font-family: inherit; 
 }
