--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -105,34 +105,32 @@ div.vacatures header{
     line-height: 1.1em;
     max-height: 2.2em;
     overflow: hidden;
-    font-weight: 500;
-    font-size: 1.2em;
+    /*font-weight: 500;
+    font-size: 1.2em;*/
 }
-.sliderUnder .text .datum{
-    margin: 1em 0 0 0;
+.sliderUnder .text p{
     font-size: 1em;
     color: #777;
 }
-.sliderUnder .text p.beschrijving{
-    font-size: .85em;
-    line-height: 1.25em;
-    overflow: hidden;
-    height: 2.5em;
-    color: #777;
-}
 .sliderUnder .messages{
-<<<<<<< HEAD
     
-=======
-    z-index: 1;
->>>>>>> origin/master
     display: block;
-    width: 3.5em;
-    min-height: 5.4em;
+    width: 2.5em;
+    min-height: 6em;
     position: absolute;
     right: 0;
-    top: 2em;
+    top: 0;
+    
+    
+    /*text-align: center;
+    display: inline-block;
+    width: 15%;*/
+    /*min-height: 6em;*/
     margin: 0 5% 0 0;
+    /*overflow: hidden;*/
+    /*float: right;*/
+    /*position: relative;*/
+    /*background: url(../img/msg.png) no-repeat center;*/
     background-size: 2.5em;
 }
 
@@ -146,8 +144,7 @@ div.vacatures header{
     width: 2.5em;
     height: 2.5em;
     position: absolute;
-    top: 1.5em;
-    left: .5em;
+    top: 1.75em;
 }
 
 
