--- a/css/algemene.css
+++ b/css/algemene.css
@@ -1,7 +1,10 @@
 * {
     padding: 0;
     margin: 0;
-    
+    outline: none;
+}
+
+*:not(input[type='text']){
     -webkit-touch-callout:none;
     -webkit-user-select:none;
     -khtml-user-select:none;
