--- a/css/berichten.css
+++ b/css/berichten.css
@@ -8,8 +8,6 @@ h2 {
 .bericht{
     position: relative;
     background-color: #EEF3F5;
-    margin-bottom: 5px;
-    padding-bottom:20px;
     right: 0;
 }
 .sliderTop{
@@ -35,10 +33,6 @@ h2 {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-}
-.sliderTop ul li:hover{
-    cursor: pointer;
-    background-color: #f66;
 }
 .sliderTop ul li img{
     width: 1.5em;
@@ -93,6 +87,11 @@ header{
     display:none;
     z-index: 5;
 
+}
+.sliderUnder{
+    height: 100%;
+    margin-bottom: 5px;
+    padding-bottom:20px;
 }
 .editKnop{
     position:absolute;
