--- a/css/algemene.css
+++ b/css/algemene.css
@@ -4,7 +4,7 @@
     outline: none;
 }
 
-*:not(input[type='text']){
+a {
     -webkit-touch-callout:none;
     -webkit-user-select:none;
     -khtml-user-select:none;
@@ -116,6 +116,11 @@ h2 {
 }
 
 .main {
+    color: white;
+    background-color: #48CFAD;
+}
+
+.main a p {
     color: white;
     background-color: #48CFAD;
 }
