--- a/css/vacatures_wg.css
+++ b/css/vacatures_wg.css
@@ -97,11 +97,11 @@ div.vacatures header{
     /*box-sizing: border-box;*/
     /*display: inline-block;*/
 }
-.sliderUnder .text h1{
+.sliderUnder .text h2{
     margin: 0 0 1em;
     font-weight: 400;
     font-size: 1.1em;
-    
+    color: #555;
     line-height: 1.1em;
     max-height: 1.1em;
     overflow: hidden;
