instellingen, profiel en profiel bewerken - WN

--- a/css/profielstudent.css
+++ b/css/profielstudent.css
@@ -17,6 +17,9 @@ h4{
 #profielbanner{
     height:200px;
 }
+#profielbanner #name{
+    text-transform: capitalize;
+}
 #blur{
     overflow:hidden;
     box-sizing: border-box;
