--- a/css/instellingen.css
+++ b/css/instellingen.css
@@ -14,6 +14,10 @@ img{
     border-bottom: solid 1px #48CFAD;
 }
 
+.profile #name{
+    text-transform: capitalize;
+}
+
 .noborderline{
     border-bottom: 0;
 }
