Facebook button is terug!!!

--- a/css/login.css
+++ b/css/login.css
@@ -49,7 +49,7 @@ a.accountLink {
 }
 
 .facebookLogin {
-    background-color: #48CFAD;
+    background-color: #7788B8;
     color: #FFF;
     text-decoration: none;
     display: block;
